test/parse/module/bad-element-followed-by-illegal-expression.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-gc
;;; ERROR: 1
( elem f64 ( ) ) 
(;; STDERR ;;;
out/test/parse/module/bad-element-followed-by-illegal-expression.txt:4:8: error: value type not allowed: f64
( elem f64 ( ) ) 
       ^^^
;;; STDERR ;;)
